fix cart styles on mobile

--- a/resources/styles/_base.scss
+++ b/resources/styles/_base.scss
@@ -20,7 +20,6 @@
   h5,
   h6 {
     @apply leading-headings;
-    @apply py-1;
   }
 
   h4,
